Saved search active contrast fix

--- a/arches/app/media/css/arches.css
+++ b/arches/app/media/css/arches.css
@@ -8289,7 +8289,6 @@ a.search-query-link-captions:hover {
 
 a.search-query-link-captions:active {
     font-weight: 600;
-    color: #fff;
 }
 
 a.search-query-link-captions:focus {
